#document added documentation #feature added static names to avoid code smells and removed unused imports